social media link font sizes

--- a/forms/form.html
+++ b/forms/form.html
@@ -8,7 +8,7 @@
     <title>ShakexSempe Portfolio Page</title>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/form.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" defer/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" defer />
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css"
         integrity="sha512-6qkvBbDyl5TDJtNJiC8foyEVuB6gxMBkrKy67XpqnIDxyvLLPJzmTjAj1dRJfNdmXWqD10VbJoeN4pOQqDwvRA=="
@@ -17,7 +17,7 @@
 
 <body>
     <!--Header-->
-    <header id="header" class="form-header"> 
+    <header id="header" class="form-header">
         <div class="header container">
             <nav id="navbar" class="form-nav">
                 <div class="brand">
@@ -94,7 +94,7 @@
                 <form action="https://formsubmit.co/bshakex@gmail.com" method="POST">
                     <div class="page slide-page">
                         <div class="title">
-                           <h3>Basic Info</h3>
+                            <h3>Basic Info</h3>
                         </div>
                         <div class="field">
                             <div class="label">
@@ -127,7 +127,8 @@
                             <div class="label">
                                 Email Address*
                             </div>
-                            <input tabindex="3" type="email" name="email" required placeholder="eg. youremail@email.com">
+                            <input tabindex="3" type="email" name="email" required
+                                placeholder="eg. youremail@email.com">
                         </div>
                         <div class="field">
                             <div class="label">
@@ -140,7 +141,7 @@
                             <button class="next-1 next">Next</button>
                         </div>
                     </div>
-                    <div class="page" >
+                    <div class="page">
                         <div class="title">
                             <h3>Services / Work</h3>
                         </div>
@@ -148,7 +149,7 @@
                             <p>I'm available for: Front End / Junior Web Development role.</p>
                             <p>I'm also open to work as part of a startup or freelance team.</p>
                         </div>
-                            <div class="field">
+                        <div class="field">
                             <select tabindex="5" name="work">
                                 <option selected="selected" disabled="disabled">Service / Job Title</option>
                                 <option>Front Web Developer</option>
@@ -156,7 +157,7 @@
                                 <option>Freelance</option>
                                 <option>Start-Up</option>
                             </select>
-                            </div>
+                        </div>
                         <div class="field btns">
                             <button class="prev-2 prev">Previous</button>
                             <button class="next-2 next">Next</button>
@@ -168,9 +169,10 @@
                         </div>
                         <div class="field">
                             <div class="label">
-                            Leave a message or request CV 
+                                Leave a message or request CV
                             </div>
-                            <textarea tabindex="6" name="Message" id="textarea" cols="50" rows="50" placeholder="leave a message or request CV"></textarea>
+                            <textarea tabindex="6" name="Message" id="textarea" cols="50" rows="50"
+                                placeholder="leave a message or request CV"></textarea>
                         </div>
                         <div class="field btns">
                             <button class="prev-3 prev">Previous</button>
@@ -187,50 +189,69 @@
         </div>
     </section>
     <!-- End of Hero Section-->
-<!--Footer-->
-<footer id="footer" class="form-footer">
-    <div class="footer container">
+    <!--Footer-->
+    <footer id="footer" class="form-footer">
+        <div class="footer container">
 
 
-        <section class="map">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d229675.12502143384!2d25.66245999999999!3d-25.913090900000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ea2b4d46c9c331d%3A0xfa60fcd66dc15cae!2sMahikeng!5e0!3m2!1sen!2sza!4v1628414165194!5m2!1sen!2sza"
-                allowfullscreen="" loading="lazy"></iframe>
-        </section>
+            <section class="map">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d229675.12502143384!2d25.66245999999999!3d-25.913090900000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ea2b4d46c9c331d%3A0xfa60fcd66dc15cae!2sMahikeng!5e0!3m2!1sen!2sza!4v1628414165194!5m2!1sen!2sza"
+                    allowfullscreen="" loading="lazy"></iframe>
+            </section>
 
 
-        <div class="social-icon">
-            <div class="social-item">
-                <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" data-icon="linkedin" target="_blank">
-                    <i class="fab fa-linkedin-in"></i>
-                </a>
-            </div>
-            <div class="social-item">
-                <a href="https://github.com/ShakexSempe" data-icon="github" target="_blank">
-                    <i class="fab fa-github"></i>
-                </a>
-            </div>
-            <div class="social-item">
-                <a href="https://www.freecodecamp.org/boitumelo-sempe" data-icon="freeCodeCamp" target="_blank">
-                    <i class="fab fa-free-code-camp"></i>
-                </a>
-            </div>
-            <div class="social-item">
-                <a href="https://twitter.com/Shake_x11" data-icon="twitter" target="_blank">
-                    <i class="fab fa-twitter"></i>
-                </a>
+            <!-- social media links -->
+            <section class="socialMedia-links">
+                <!-- social media link -->
+                <div class="socialMedia-item twitter">
+                    <p class="link-icon">twitter</p>
+                    <a href="https://twitter.com/Shake_x11" data-icon="twitter" target="_blank">
+                        <i class="fab fa-twitter"></i>@shake_x11
+                    </a>
+                </div>
+                <!-- end of social media link -->
+                <!-- social media link -->
+                <div class="socialMedia-item linkedin">
+                    <!-- <i class="fas fa-link link-icon"></i> -->
+                    <p class="link-icon">linkedin</p>
+                    <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" data-icon="linkedin"
+                        target="_blank">
+                        <i class="fab fa-linkedin-in"></i>boitumelo Sempe
+                    </a>
+                </div>
+                <!-- end of social media link -->
+                <!-- social media link -->
+                <div class="socialMedia-item github">
+                    <p class="link-icon">github</p>
+                    <a href="https://github.com/ShakexSempe" data-icon="github" target="_blank">
+                        <i class="fab fa-github"></i>ShakexSempe
+                    </a>
+                </div>
+                <!-- end of social media link -->
+                <!-- social media link -->
+                <div class="socialMedia-item fcc">
+                    <p class="link-icon">freeCodecamp</p>
+                    <a href="https://www.freecodecamp.org/boitumelo-sempe" data-icon="FCC" target="_blank">
+                        <i class="fab fa-free-code-camp"></i>boitumelo sempe
+                    </a>
+                </div>
+                <!-- end of social media link -->
+
+
+
+            </section>
+            <!-- end of social media links -->
+            <div id="bs21">
+                <p>copyright&copy; Boitumelo Sempe.</p>
+                <p><span>s</span>hakex <span>s</span>empe</p>
+                <span id="date"></span>
             </div>
         </div>
-        <div id="bs21">
-            <p>copyright&copy; Boitumelo Sempe.</p>
-            <p><span>s</span>hakex <span>s</span>empe</p>
-            <span id="date"></span>
-        </div>
-    </div>
 
-</footer>
-<!--End of Footer-->
-    
+    </footer>
+    <!--End of Footer-->
+
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
