--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
     <div class="footer container">
       <!-- contact form -->
       <form class="contact-form" target="_blank" action="https://formsubmit.co/bshakex@gmail.com" method="POST">
-        <h1>Get In Touch</h1>
+        <h1 class="footer-section-title">Get In Touch</h1>
 
         <div class="input-div">
           <label for="name">name :</label>
@@ -434,6 +434,8 @@
 
       <!-- social media links -->
       <section class="socialMedia-links">
+        <h1 class="footer-section-title">lets link</h1>
+        <section class="links-grid">
         <!-- social media link -->
         <div class="socialMedia-item twitter">
           <p class="link-icon">twitter</p>
@@ -466,10 +468,8 @@
             <i class="fab fa-free-code-camp"></i>boitumelo sempe
           </a>
         </div>
-        <!-- end of social media link -->
-        
-        
-
+        <!-- end of social media link -->    
+      </section>
       </section>
       <!-- end of social media links -->
 
