footer heading padding and form label font

--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
 
       <!-- social media links -->
       <section class="socialMedia-links">
-        <h1 class="footer-section-title">lets link</h1>
+        <h1 class="footer-section-title">my links</h1>
         <section class="links-grid">
         <!-- social media link -->
         <div class="socialMedia-item twitter">
