about section background test

--- a/index.html
+++ b/index.html
@@ -312,10 +312,10 @@
       <div class="about-header">
         <h1 data-text="aboutme" class="section-title">About<span>me</span></h1>
       </div>
-      <div class="about-title">
+      <!-- <div class="about-title">
         <h2>Front End Web Developer</h2>
         <a id="cv-download" href="./forms/form.html" target="_blank">request cv</a>
-      </div>
+      </div> -->
         <article id="content-1" class="custom-scrollbar-js">
         <p>Boitumelo 'Shakex' Sempe is an International Relations Graduate from University of Pretoria having gained
           his A-levels from the
