#pad section between projects and about

--- a/index.html
+++ b/index.html
@@ -299,7 +299,9 @@
       <div class="all-projects"></div>
   </section>
   <!--End of Projects Section-->
-
+<!-- padding section -->
+<section id="pad"></section>
+<!-- end of padding section -->
 <!--About Section-->
 <section id="about">
   <div class="about container">
