paralax sections: sixe test: contain

--- a/index.html
+++ b/index.html
@@ -288,7 +288,9 @@
     </div>
   </section>
   <!--End of Skills section-->
-
+<!-- padding section -->
+<section class="paralax px1"></section>
+<!-- end of padding section -->
   <!--Projects Section-->
   <section id="projects">
     <div class="projects container">
@@ -300,7 +302,7 @@
   </section>
   <!--End of Projects Section-->
 <!-- padding section -->
-<section id="pad"></section>
+<section class="paralax px2"></section>
 <!-- end of padding section -->
 <!--About Section-->
 <section id="about">
