paralax2 under about section

--- a/index.html
+++ b/index.html
@@ -297,13 +297,14 @@
       <div class="projects-header">
         <h1 data-text="projects" id="projects-h1" class="section-title">Projects</h1>
       </div>
-
       <div class="all-projects"></div>
   </section>
   <!--End of Projects Section-->
+
 <!-- padding section -->
 <section class="paralax px2"></section>
 <!-- end of padding section -->
+
 <!--About Section-->
 <section id="about">
   <div class="about container">
@@ -356,6 +357,10 @@
     </div>
 </section>
 <!--End of About Section-->  
+
+<!-- padding section -->
+<section class="paralax px2"></section>
+<!-- end of padding section -->
 
 <!--Contact Section-->
 <section id="contact">
