article ::first-letter

--- a/index.html
+++ b/index.html
@@ -317,16 +317,10 @@
       <div class="about-header">
         <h1 data-text="aboutme" class="section-title">About<span>me</span></h1>
       </div>
-      <!-- <div class="about-title">
-        <h2>Front End Web Developer</h2>
-        <a id="cv-download" href="./forms/form.html" target="_blank">request cv</a>
-      </div> -->
-        <article id="content-1" class="custom-scrollbar-js">
-        <p>Boitumelo 'Shakex' Sempe is an International Relations Graduate from University of Pretoria having gained
+        <article class="about-article">
+        <p id="b">Boitumelo 'Shakex' Sempe is an International Relations Graduate from University of Pretoria having gained
           his A-levels from the
           International School of South Africa.</p>
-        <p>
-        </p>
 
         <p>Boitumelo is looking first job in the industry where he can gain the necessary professional
           competencies to make an effective web developer that can add value to web based products
