test: javascrip about height

--- a/index.html
+++ b/index.html
@@ -318,24 +318,25 @@
         <h1 data-text="aboutme" class="section-title">About<span>me</span></h1>
       </div>
         <article class="about-article">
-        <p id="b">Boitumelo 'Shakex' Sempe is an International Relations Graduate from University of Pretoria having gained
+        <p id="intro">Boitumelo 'Shakex' Sempe is an International Relations Graduate from University of Pretoria having gained
           his A-levels from the
-          International School of South Africa.</p>
+          International School of South Africa. <span>read more</span> </p>
 
-        <p>Boitumelo is looking first job in the industry where he can gain the necessary professional
+        <p class="about-body" id="about-body">Boitumelo is looking first job in the industry where he can gain the necessary professional
           competencies to make an effective web developer that can add value to web based products
           and services.
         </p>
 
-        <p>A former Customer Care agent at the Compensation Fund (Department of Labour), he started coding in 2019
+        <p class="about-body">A former Customer Care agent at the Compensation Fund (Department of Labour), he started coding in 2019
           and enrolled in the online coding bootcamp
           <a href="https://www.freecodecamp.org/boitumelo-sempe" target="_blank" class="fcc-link">FreeCodeCamp</a>
           where he completed a certificate in Responsive Web Design.
         </p>
-        <p>Boitumelo is currently studying towards MERN stack competency and committed to learning other development
+        <p class="about-body">Boitumelo is currently studying towards MERN stack competency and committed to learning other development
           stacks such as Python and PHP back end scripting.
         </p>
       </article>
+      <button id="readBtn">read more</button>
       
       <article id="cv">
         <a href="https://codepen.io/bSempe" target="_blank" class="fcc-link">
