read more button

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                 </a>
               </figure>
               <figcaption>
-                <a href="https://twitter.com/Shake_x11" target="_blank">Boitumelo sempe
+                <a href="https://github.com/ShakexSempe" target="_blank">Boitumelo sempe
                   <span>
-                    @shake_x11 <i class="fab fa-twitter"></i></span></a>
+                    Shakex Sempe <i class="fab fa-github"></i></span></a>
                     
               </figcaption>
             <ul class="links">
