--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
         <article class="about-article">
         <p id="intro">Boitumelo 'Shakex' Sempe is an International Relations Graduate from University of Pretoria having gained
           his A-levels from the
-          International School of South Africa. <span>read more</span> </p>
+          International School of South Africa.</p>
 
         <p class="about-body" id="about-body">Boitumelo is looking first job in the industry where he can gain the necessary professional
           competencies to make an effective web developer that can add value to web based products
