SEO meta and link tags

--- a/index.html
+++ b/index.html
@@ -2,10 +2,23 @@
 <html lang="en">
 
 <head>
+  <!-- META CHARSET -->
   <meta charset="UTF-8" />
+  <!-- META VIEWPORT -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- META THEME COLOR -->
   <meta name="theme-color" content="#29323c"/>
-  <title>ShakexSempe Portfolio Page</title>
+  <!-- TITLE -->
+  <title>ShakexSempe - Personal Portfolio Page</title>
+  <!--  -->
+  <!-- META DESCRIPTION -->
+  <meta name="description" content="This is a front end web developers personal portfolio featuring font end web development projects, skills, contact info , social media and web development learning platforms links">
+  <!-- META KEYWORDS -->
+  <meta name="keywords" content="HTML, HTML5, CSS, CSS3, JAVASCRIPT, JS, WEB DEVELOPMENT, SASS ">
+  <!-- META AUTHOR -->
+  <meta name="author" content="Boitumelo Shakex Sempe">
+  <!-- FAVICON -->
+  <link rel="shortcut icon" href="icons/favicon.ico">
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" defer/>
   <link rel="stylesheet"
@@ -31,11 +44,11 @@
           <div class="links-container">
               <figure class="nav-avi">
                 <a href="#about-img"  id="avi">
-                  <img src="img/me.jpg" alt="avi" style="width: 100%" loading="lazy">
+                  <img src="img/me-min.jpg" alt="shakex sempe" style="width: 100%" loading="lazy">
                 </a>
               </figure>
               <figcaption>
-                <a href="https://github.com/ShakexSempe" target="_blank">Boitumelo sempe
+                <a href="https://github.com/ShakexSempe" title="github" target="_blank">Boitumelo sempe
                   <span>
                     Shakex Sempe <i class="fab fa-github"></i></span></a>
                     
@@ -442,8 +455,8 @@
         
         <!-- social media link -->
         <div class="socialMedia-item fcc">
-          <p class="link-icon">freeCodecamp</p>
-          <a href="https://www.freecodecamp.org/boitumelo-sempe" data-icon="FCC" target="_blank">
+          <p class="link-icon">freeCodeCamp</p>
+          <a href="https://www.freecodecamp.org/boitumelo-sempe" title="freeCodecamp" data-icon="FCC" target="_blank">
             <i class="fab fa-free-code-camp"></i>boitumelo sempe
           </a>
         </div>
@@ -451,7 +464,7 @@
         <!-- social media link -->
         <div class="socialMedia-item fem">
           <p class="link-icon">front-end-mentor</p>
-          <a href="https://www.frontendmentor.io/profile/ShakexSempe" data-icon="FCC" target="_blank">
+          <a href="https://www.frontendmentor.io/profile/ShakexSempe" title="font-end-mentor" data-icon="FCC" target="_blank">
             <i class="fas fa-anchor"></i>@ShakexSempe
           </a>
         </div>
@@ -459,7 +472,7 @@
         <!-- social media link -->
         <div class="socialMedia-item github">
           <p class="link-icon">github</p>
-          <a href="https://github.com/ShakexSempe" data-icon="github" target="_blank">
+          <a href="https://github.com/ShakexSempe" title="github" data-icon="github" target="_blank">
             <i class="fab fa-github"></i>ShakexSempe
           </a>
         </div>
@@ -468,7 +481,7 @@
         <div class="socialMedia-item linkedin">
           <!-- <i class="fas fa-link link-icon"></i> -->
           <p class="link-icon">linkedin</p>
-          <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/"  data-icon="linkedin" target="_blank">
+          <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" title="linkedin" data-icon="linkedin" target="_blank">
             <i class="fab fa-linkedin-in"></i>boitumelo Sempe
           </a>
         </div>
@@ -476,7 +489,7 @@
         <!-- social media link -->
         <div class="socialMedia-item twitter">
           <p class="link-icon">twitter</p>
-          <a href="https://twitter.com/Shake_x11" data-icon="twitter" target="_blank">
+          <a href="https://twitter.com/Shake_x11" title="twitter" data-icon="twitter" target="_blank">
             <i class="fab fa-twitter"></i>@shake_x11
           </a>
         </div>
