meta tag: og image

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- META THEME COLOR -->
   <meta name="theme-color" content="#29323c"/>
+  <!-- META OG IMAGE -->
+  <meta name="image" property="og:image" content="https://shakexsempe.netlify.app/img/desktop-min.png">
+
   <!-- TITLE -->
   <title>ShakexSempe - Personal Portfolio Page</title>
   <!--  -->
