--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <title>ShakexSempe - Personal Portfolio Page</title>
   <!--  -->
   <!-- META DESCRIPTION -->
-  <meta name="description" content="This is a front end web developers personal portfolio featuring font end web development projects, skills, contact info , social media and web development learning platforms links">
+  <meta name="description" content="This is Boitumelo Shakex Sempe's front end web development personal portfolio. This page contains links to github repositories, information about Boitumelo Shakex Sempe's web development skills, contact info , social media links and web development learning platforms links">
   <!-- META KEYWORDS -->
-  <meta name="keywords" content="HTML, HTML5, CSS, CSS3, JAVASCRIPT, JS, WEB DEVELOPMENT, SASS ">
+  <meta name="keywords" content="HTML, HTML5, CSS, CSS3, JAVASCRIPT, JS, WEB DEVELOPMENT, SASS, FRONT-END DEVELOPMENT">
   <!-- META AUTHOR -->
   <meta name="author" content="Boitumelo Shakex Sempe">
   <!-- FAVICON -->
