--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <title>ShakexSempe - Personal Portfolio Page</title>
   <!--  -->
   <!-- META DESCRIPTION -->
-  <meta name="description" content="This is Boitumelo Shakex Sempe's front end web development personal portfolio. This page contains links to github repositories, information about Boitumelo Shakex Sempe's web development skills, contact info , social media links and web development learning platforms links">
+  <meta name="description" content="This is Boitumelo Shakex Sempe's front-end Web development Personal Portfolio Page. 
+  This page contains links to github repositories, information about web development skills, contact info , social media links and web development learning platforms links">
   <!-- META KEYWORDS -->
   <meta name="keywords" content="HTML, HTML5, CSS, CSS3, JAVASCRIPT, JS, WEB DEVELOPMENT, SASS, FRONT-END DEVELOPMENT">
   <!-- META AUTHOR -->
