--- a/index.html
+++ b/index.html
@@ -381,6 +381,18 @@
       <h1 data-text="contactinfo" class="section-title">Contact<span>Info</span></h1>
     </div>
     <div class="contact-items">
+
+      <div class="contact-item">
+        <div class="icon">
+          <img src="/icons/icons8-address-64.png" alt="img" srcset="https://img.icons8.com/nolan/64/address.png" />
+        </div>
+        <h1>Address</h1>
+        <div class="contact-info">
+          <h2>Mahikeng, North West.<span>south africa</span></h2>
+          <a href="https://goo.gl/maps/8XfqHABUeWN6oEjB6" target="_blank"><i class="fas fa-map-pin"></i>  where?</a>
+        </div>
+      </div>
+
       <div class="contact-item">
         <div class="icon">
           <img src="/icons/icons8-email-64.png" alt="img" srcset="https://img.icons8.com/nolan/64/email.png" />
@@ -388,7 +400,7 @@
         <h1>Email</h1>
         <div class="contact-info">
             <h2>bshakex@gmail.com</h2>
-            <a href="./forms/form.html" target="_blank">Get In Touch</a>
+            <a href="mailto:bshakex@gmail.com"><i class="fas fa-at"></i> send an email</a>
         </div>
       </div>
 
@@ -399,20 +411,11 @@
         <h1>Phone</h1>
         <div id="phone" class="contact-info">
           <h2>+27 72 600 5104</h2>
-          <h2>+27 71 687 6941</h2>
+          <a href="tel:0726005104"><i class="fas fa-phone-alt"></i> call me</a>
         </div>
       </div>
       
-      <div class="contact-item">
-        <div class="icon">
-          <img src="/icons/icons8-address-64.png" alt="img" srcset="https://img.icons8.com/nolan/64/address.png" />
-        </div>
-        <h1>Address</h1>
-        <div class="contact-info">
-          <h2>Mahikeng, North West</h2>
-          <h2>South Africa</h2>
-        </div>
-      </div>
+      
 
     </div>
   </div>
