--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <meta name="image" property="og:image" content="https://shakexsempe.netlify.app/img/desktop-min.png">
 
   <!-- TITLE -->
-  <title>ShakexSempe - Personal Portfolio Page</title>
+  <title>Shakex Sempe - Front End Developer - Personal Portfolio Page</title>
   <!--  -->
   <!-- META DESCRIPTION -->
-  <meta name="description" content="This is Boitumelo Shakex Sempe's front-end Web development Personal Portfolio Page. 
-  This page contains links to github repositories, information about web development skills, contact info , social media links and web development learning platforms links">
+  <meta name="description" content="Boitumelo Shakex Sempe is a South Africa based front-end Web developer. 
+  This Personal Portfolio Page contains links to github repositories, information about web development skills, contact info , social media links and web development learning platform links">
   <!-- META KEYWORDS -->
-  <meta name="keywords" content="HTML, HTML5, CSS, CSS3, JAVASCRIPT, JS, WEB DEVELOPMENT, SASS, FRONT-END DEVELOPMENT">
+  <meta name="keywords" content="HTML, HTML5, CSS, CSS3, JAVASCRIPT, JS, WEB DEVELOPMENT, SASS, FRONT-END DEVELOPMENT, south africa, react, vanilla javascript, Responsive web design, remote, freelance>
   <!-- META AUTHOR -->
   <meta name="author" content="Boitumelo Shakex Sempe">
   <!-- FAVICON -->
