--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta name="description" content="Boitumelo Shakex Sempe is a South Africa based front-end Web developer. 
   This Personal Portfolio Page contains links to github repositories, information about web development skills, contact info , social media links and web development learning platform links">
   <!-- META KEYWORDS -->
-  <meta name="keywords" content="HTML, HTML5, CSS, CSS3, JAVASCRIPT, JS, WEB DEVELOPMENT, SASS, FRONT-END DEVELOPMENT, south africa, react, vanilla javascript, Responsive web design, remote, freelance>
+  <meta name="keywords" content="HTML, HTML5, CSS, CSS3, JAVASCRIPT, JS, WEB DEVELOPMENT, SASS, FRONT-END DEVELOPMENT, south africa, react, vanilla javascript, Responsive web design, remote, freelance" >
   <!-- META AUTHOR -->
   <meta name="author" content="Boitumelo Shakex Sempe">
   <!-- FAVICON -->
