--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
         <a href="https://codepen.io/bSempe" target="_blank" class="fcc-link">
           <i class="fab fa-codepen" aria-hidden="true"></i>CodePen
         </a>
-        <a href="./forms/form.html" target="_blank" class="fcc-link">
+        <a href="./cv/b-sempe-cv-2021.pdf" target="_blank" class="fcc-link">
           <i class="fas fa-user-graduate"></i>cv
         </a>
         <a href="https://github.com/ShakexSempe" target="_blank" id="profile-link">
