--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="header container">
       <nav id="navbar">
         <div class="brand">
-          <a href="#footer" class="scroll-link">
+          <a href="#footer" title="shakex sempe" class="scroll-link">
             <h1><span>S</span>hakex <span>S</span>empe</h1>
           </a>
         </div>
@@ -43,7 +43,7 @@
           </div>
           <div class="links-container">
               <figure class="nav-avi">
-                <a href="#about-img"  id="avi">
+                <a href="#about-img" title="shakex-sempe-avi" id="avi">
                   <img src="img/me-min.jpg" alt="shakex sempe" style="width: 100%" loading="lazy">
                 </a>
               </figure>
@@ -54,12 +54,12 @@
                     
               </figcaption>
             <ul class="links">
-              <li><a href="#skills" data-after="skills" class="scroll-link scroll-li"><i class="fas fa-lightbulb"></i>skills</a></li>
-              <li><a href="#projects" data-after="Projects" class="scroll-link scroll-li"><i class="fab fa-github"></i>projects</a></li>
-              <li><a href="#about" data-after="About" class="scroll-link scroll-li"><i class="fas fa-user-circle"></i>about</a></li>
-              <li><a href="#contact" data-after="Contact" class="scroll-link scroll-li"><i class="fas fa-at"></i>contact</a></li>
-              <li><a href="#footer" data-after="Socials" class="scroll-link scroll-li"><i class="fas fa-user-friends"></i>socials</a></li>
-              <li><a href="forms/form.html" target="_blank" data-after="forms" class="scroll-li"><i class="fas fa-address-book"></i>get In touch</a></li>
+              <li><a href="#skills" title="skills" data-after="skills" class="scroll-link scroll-li"><i class="fas fa-lightbulb"></i>skills</a></li>
+              <li><a href="#projects" title="projects" data-after="Projects" class="scroll-link scroll-li"><i class="fab fa-github"></i>projects</a></li>
+              <li><a href="#about" title="about" data-after="About" class="scroll-link scroll-li"><i class="fas fa-user-circle"></i>about</a></li>
+              <li><a href="#contact" title="contact-info" data-after="Contact" class="scroll-link scroll-li"><i class="fas fa-at"></i>contact</a></li>
+              <li><a href="#footer" title="social-links" data-after="Socials" class="scroll-link scroll-li"><i class="fas fa-user-friends"></i>socials</a></li>
+              <li><a href="forms/form.html" title="contact-form" target="_blank" data-after="forms" class="scroll-li"><i class="fas fa-address-book"></i>get In touch</a></li>
             </ul>
           </div>
         </div>
@@ -516,7 +516,7 @@
   </footer>
   <!--End of Footer-->
   <!--back to top button-->
-  <a href="#home" class="scroll-link top-link">
+  <a href="#home" title="home" class="scroll-link top-link">
     <i class="fas fa-arrow-up"></i>
   </a>
   <!--end of back to top button-->
