--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </figure>
             <figcaption>
               <a href="https://github.com/ShakexSempe" title="github" target="_blank">Boitumelo sempe
-                <span>
+                <span class="nav-git-link">
                   Shakex Sempe <i class="fab fa-github"></i></span></a>
             </figcaption>
             <ul class="links">
