active nav logo

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                 <span class="nav-git-link">
                   Shakex Sempe <i class="fab fa-github"></i></span></a>
             </figcaption>
+            <div class="nav-logo">
+              <img src="/img/shakex-logo-min.png" alt="logo" loading="lazy">
+            </div>
             <ul class="links">
               <li><a href="#skills" title="skills" data-after="skills" class="scroll-link scroll-li"><i
                     class="fas fa-lightbulb"></i>skills</a></li>
