--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   Shakex Sempe <i class="fab fa-github"></i></span></a>
             </figcaption>
             <div class="nav-logo">
-              <img src="/img/shakex-logo-min.png" alt="logo" loading="lazy">
+              <img src="img/shakex-logo-min.png" alt="logo" loading="lazy">
             </div>
             <ul class="links">
               <li><a href="#skills" title="skills" data-after="skills" class="scroll-link scroll-li"><i
