--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <nav id="navbar">
         <div class="brand">
           <a href="#footer" title="shakex sempe" class="scroll-link">
-            <h1><span>S</span>hakex <span>S</span>empe</h1>
+            <h1><span>Shakex</span>Sempe</h1>
           </a>
         </div>
         <div class="nav-list">
@@ -392,7 +392,7 @@
           <h1>Address</h1>
           <div class="contact-info">
             <h2>Mahikeng, North West.<span>south africa</span></h2>
-            <a href="https://goo.gl/maps/8XfqHABUeWN6oEjB6" target="_blank"><i class="fas fa-map-pin"></i> where?</a>
+            <a href="https://goo.gl/maps/8XfqHABUeWN6oEjB6" target="_blank"><i class="fas fa-map-pin"></i>..where?</a>
           </div>
         </div>
 
@@ -403,7 +403,7 @@
           <h1>Email</h1>
           <div class="contact-info">
             <h2>bshakex@gmail.com</h2>
-            <a href="mailto:bshakex@gmail.com"><i class="fas fa-at"></i> send an email</a>
+            <a href="mailto:bshakex@gmail.com"><i class="fas fa-at"></i> ..email me</a>
           </div>
         </div>
 
@@ -414,7 +414,7 @@
           <h1>Phone</h1>
           <div id="phone" class="contact-info">
             <h2>+27 72 600 5104</h2>
-            <a href="tel:0726005104"><i class="fas fa-phone-alt"></i> call me</a>
+            <a href="tel:0726005104"><i class="fas fa-phone-alt"></i> ..call me</a>
           </div>
         </div>
 
@@ -448,10 +448,10 @@
 
         <div class="input-div">
           <label for="message">message :</label>
-          <textarea rows="3" cols="50" name="message" placeholder="leave a message..." id="message"></textarea>
+          <textarea rows="3" cols="50" name="message" placeholder="leave a message..." id="message" required></textarea>
         </div>
 
-        <button type="submit">send</button>
+        <button type="submit">send email</button>
         <!-- form options -->
         <input type="hidden" name="_subject" value="New submission!">
         <input type="hidden" name="_autoresponse" value="Shakex has received your form">
