--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- META THEME COLOR -->
   <meta name="theme-color" content="#29323c" />
   <!-- META OG IMAGE -->
-  <meta name="image" property="og:image" content="https://shakexsempe.netlify.app/img/desktop-min.png">
+  <meta name="image" property="og:image" content="https://shakexsempe.netlify.app/img/shakex-logo-min.png">
 
   <!-- TITLE -->
   <title>Shakex Sempe - Front End Developer - Personal Portfolio Page</title>
