nav logo border and nav ul overlow scroll

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
           </div>
           <div class="links-container">
             <div class="nav-logo">
-              <img src="img/shakex-logo-min.png" alt="logo" loading="lazy">
+              <a href="#home" id="nav-logo">
+                <img src="img/shakex-logo-min.png" alt="logo" loading="lazy">
+              </a>
             </div>
             <ul class="links">
               <li><a href="#skills" title="skills" data-after="skills" class="scroll-link scroll-li"><i
@@ -60,6 +62,7 @@
                     class="fas fa-user-friends"></i>socials</a></li>
               <li><a href="forms/form.html" title="contact-form" target="_blank" data-after="forms" class="scroll-li"><i
                     class="fas fa-address-book"></i>get In touch</a></li>
+                    
             </ul>
           </div>
         </div>
