--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
           </div>
           <h1>Address</h1>
           <div class="contact-info">
-            <h2>Mahikeng, North West.<span>south africa</span></h2>
+            <h2>Mahikeng, North West.<span>South Africa</span></h2>
             <a href="https://goo.gl/maps/8XfqHABUeWN6oEjB6" target="_blank"><i class="fas fa-map-pin"></i>..where?</a>
           </div>
         </div>
