nav logo link to about section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </div>
           <div class="links-container">
             <div class="nav-logo">
-              <a href="#home" id="nav-logo">
+              <a href="#about" id="nav-logo">
                 <img src="img/shakex-logo-min.png" alt="logo" loading="lazy">
               </a>
             </div>
