--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
             <div id="html5" class="skills-item">
               <div class="icon">
-                <img src="icons/icons8-html-5-64.png" alt="icon" />
+                <i class="fab fa-html5" alt="icon"></i>
               </div>
               <h2>HTML 5</h2>
               <ul>
@@ -140,7 +140,7 @@
 
             <div class="skills-item">
               <div class="icon">
-                <img src="icons/icons8-css-filetype-64.png" alt="icon" />
+                <i class="fab fa-css3-alt"></i>
               </div>
               <h2>CSS</h2>
               <ul>
@@ -153,7 +153,7 @@
 
             <div class="skills-item">
               <div class="icon">
-                <img src="icons/icons8-javascript-64.png" alt="icon" />
+                <i class="fab fa-js-square"></i>
               </div>
               <h2>Javascript</h2>
               <ul>
@@ -166,16 +166,17 @@
 
             <div class="skills-item">
               <div class="icon">
-                <img src="icons/icons8-stacked-organizational-chart-highlighted-parent-node-64.png" alt="icon" />
+                <i class="fab fa-node-js"></i>
               </div>
               <h2>Node JS</h2>
               <ul>
                 <li>Node Package Manager</li>
+                <li>express JS</li>
               </ul>
             </div>
             <div class="skills-item">
               <div class="icon">
-                <img src="icons/icons8-bootstrap-48.png" alt="icon" />
+                <i class="fab fa-bootstrap"></i>
               </div>
               <h2>Bootstrap</h2>
               <ul>
@@ -185,7 +186,7 @@
 
             <div class="skills-item">
               <div class="icon">
-                <img src="icons/icons8-sass-avatar-48.png" alt="icon" />
+                <i class="fab fa-sass"></i>
               </div>
               <h2>Sass</h2>
               <ul>
@@ -197,18 +198,20 @@
 
             <div class="skills-item">
               <div class="icon">
-                <img src="icons/icons8-react-native-64.png" alt="icon" />
+                <i class="fab fa-react"></i>
               </div>
               <h2>React JS</h2>
               <ul>
-                <li>Reactstrap</li>
                 <li>React Fundamentals</li>
               </ul>
             </div>
 
             <div class="skills-item">
               <div class="icon">
-                <img src="icons/redux.png" alt="icon" />
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+                    width="50" height="50"
+                    viewBox="0 0 172 172"
+                    style=" fill:#000000;"><g transform="translate(4.73,4.73) scale(0.945,0.945)"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="none" stroke-linecap="butt" stroke-linejoin="none" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g fill="#000000" stroke="#333333" stroke-width="10" stroke-linejoin="round" opacity="true"><path d="M127.03813,63.86172c-4.77472,-2.29448 -9.6477,-4.1932 -14.53938,-5.59672c-3.48816,-21.328 -15.76939,-37.625 -29.93875,-37.625c-16.78032,0 -30.96,22.81865 -30.96,49.83297c0,14.19047 3.93386,27.17911 10.08485,36.34172c0.64588,-0.11135 1.29977,-0.16977 1.95515,-0.17469c6.64951,0 12.04,5.39049 12.04,12.04c0,6.64951 -5.39049,12.04 -12.04,12.04c-3.57818,-0.00145 -6.97032,-1.59435 -9.25667,-4.3468c-2.28635,-2.75245 -3.22999,-6.37922 -2.57505,-9.89695c-8.58489,-11.57466 -13.96828,-27.8876 -13.96828,-46.00328c0,-35.06736 20.06208,-63.59297 44.72,-63.59297c23.08928,0 42.1458,25.01036 44.47813,56.98172zM86.12094,62.2425c14.27733,-1.16938 30.52068,2.88314 45.1836,11.67719c30.81552,18.4728 45.29786,50.32419 32.9689,72.50875c-4.61992,8.31104 -12.53326,14.16877 -22.87734,16.93797c-4.3688,1.1696 -9.0507,1.74016 -13.9011,1.74016c-11.18688,0 -23.29433,-3.06596 -34.74265,-8.8486c4.41352,-2.95152 8.4567,-6.16158 12.13406,-9.58094c11.58936,4.6612 23.35459,5.96593 32.94875,3.39969c6.66328,-1.78192 11.64596,-5.3592 14.41172,-10.33344c8.41424,-15.136 -4.41879,-39.87675 -28.01719,-54.02547c-11.92714,-7.14781 -24.84678,-10.59686 -36.02594,-9.89672c-2.02165,4.12261 -6.21213,6.73645 -10.80375,6.7389c-6.64951,0 -12.04,-5.39049 -12.04,-12.04c0,-6.64951 5.39049,-12.04 12.04,-12.04c3.29974,0.00612 6.45236,1.36627 8.72094,3.7625zM34.50078,95.82281c-14.73352,13.99392 -21.3939,31.94927 -14.74094,43.92047c2.76576,4.97424 7.74516,8.55152 14.405,10.33344c12.61792,3.38152 28.97426,0.10691 43.7525,-8.75453c12.25692,-7.35006 21.5249,-17.55551 26.49203,-27.78875c-0.75501,-1.57303 -1.20937,-3.31506 -1.20937,-5.17344c0,-6.6392 5.4008,-12.04 12.04,-12.04c6.6392,0 12.04,5.4008 12.04,12.04c0,6.19557 -4.71949,11.25615 -10.74328,11.91235c-6.12734,12.31806 -16.93198,24.094 -31.54453,32.85469c-13.06168,7.82944 -27.40847,11.97953 -40.48047,11.97953c-4.85728,0 -9.52885,-0.57056 -13.90109,-1.74016c-10.34408,-2.7692 -18.25742,-8.62693 -22.87734,-16.93797c-11.02864,-19.83848 -0.58098,-47.37288 23.77766,-66.19312c0.56416,5.418 1.576,10.6339 2.98984,15.5875z"></path></g><path d="M0,172v-172h172v172z" fill="none" stroke="none" stroke-width="1" stroke-linejoin="miter"></path><g id="original-icon" fill="#ead2a1" stroke="none" stroke-width="1" stroke-linejoin="miter"><path d="M82.56,6.88c-24.65792,0 -44.72,28.52561 -44.72,63.59297c0,18.11568 5.38339,34.42862 13.96828,46.00328c-0.65493,3.51773 0.2887,7.14451 2.57505,9.89695c2.28635,2.75245 5.67849,4.34535 9.25667,4.3468c6.64951,0 12.04,-5.39049 12.04,-12.04c0,-6.64951 -5.39049,-12.04 -12.04,-12.04c-0.65539,0.00492 -1.30928,0.06334 -1.95515,0.17469c-6.15098,-9.16261 -10.08485,-22.15125 -10.08485,-36.34172c0,-27.01432 14.17968,-49.83297 30.96,-49.83297c14.16936,0 26.45059,16.297 29.93875,37.625c4.89168,1.40352 9.76466,3.30224 14.53938,5.59672c-2.33232,-31.97136 -21.38885,-56.98172 -44.47813,-56.98172zM77.4,58.48c-6.64951,0 -12.04,5.39049 -12.04,12.04c0,6.64951 5.39049,12.04 12.04,12.04c4.59162,-0.00245 8.7821,-2.61629 10.80375,-6.7389c11.17915,-0.70015 24.0988,2.7489 36.02594,9.89672c23.5984,14.14872 36.43143,38.88947 28.01719,54.02547c-2.76576,4.97424 -7.74844,8.55152 -14.41172,10.33344c-9.59416,2.56624 -21.35939,1.26151 -32.94875,-3.39969c-3.67736,3.41936 -7.72054,6.62942 -12.13406,9.58094c11.44832,5.78264 23.55577,8.8486 34.74265,8.8486c4.8504,0 9.5323,-0.57056 13.9011,-1.74016c10.34408,-2.7692 18.25742,-8.62693 22.87734,-16.93797c12.32896,-22.18456 -2.15338,-54.03595 -32.9689,-72.50875c-14.66291,-8.79405 -30.90626,-12.84656 -45.1836,-11.67719c-2.26857,-2.39623 -5.42119,-3.75638 -8.72094,-3.7625zM31.51094,80.23531c-24.35864,18.82024 -34.8063,46.35464 -23.77766,66.19312c4.61992,8.31104 12.53326,14.16877 22.87734,16.93797c4.37224,1.1696 9.04381,1.74016 13.90109,1.74016c13.072,0 27.41879,-4.15009 40.48047,-11.97953c14.61256,-8.76069 25.41719,-20.53663 31.54453,-32.85469c6.02379,-0.65619 10.74328,-5.71677 10.74328,-11.91235c0,-6.6392 -5.4008,-12.04 -12.04,-12.04c-6.6392,0 -12.04,5.4008 -12.04,12.04c0,1.85837 0.45436,3.6004 1.20937,5.17344c-4.96713,10.23324 -14.23511,20.43869 -26.49203,27.78875c-14.77824,8.86144 -31.13458,12.13605 -43.7525,8.75453c-6.65984,-1.78192 -11.63924,-5.3592 -14.405,-10.33344c-6.65296,-11.9712 0.00742,-29.92655 14.74094,-43.92047c-1.41384,-4.9536 -2.42568,-10.1695 -2.98984,-15.5875z"></path></g><path d="" fill="none" stroke="none" stroke-width="1" stroke-linejoin="miter"></path><path d="" fill="none" stroke="none" stroke-width="1" stroke-linejoin="miter"></path><path d="" fill="none" stroke="none" stroke-width="1" stroke-linejoin="miter"></path><path d="" fill="none" stroke="none" stroke-width="1" stroke-linejoin="miter"></path><path d="" fill="none" stroke="none" stroke-width="1" stroke-linejoin="miter"></path></g></g></svg>
               </div>
               <h2>Redux</h2>
               <ul>
@@ -217,18 +220,8 @@
             </div>
 
             <div class="skills-item">
-              <div id="express-icon" class="icon">
-                <img src="icons/icons8-node-js-32.png" alt="icon" />
-              </div>
-              <h2>Express JS</h2>
-              <ul>
-                <li>Basic Routing</li>
-              </ul>
-            </div>
-
-            <div class="skills-item">
               <div class="icon">
-                <img src="icons/icons8-mongodb-48.png" alt="icon" />
+                <i class="fas fa-leaf" alt="icon"></i> 
               </div>
               <h2>MongoDB</h2>
               <ul>
@@ -239,7 +232,7 @@
 
             <div class="skills-item">
               <div id="git-icon" class="icon">
-                <img src="icons/git.png" alt="icon" />
+                <i class="fab fa-git-alt"></i>
               </div>
               <h2>Git</h2>
               <ul>
@@ -249,7 +242,7 @@
 
             <div class="skills-item">
               <div id="github-icon" class="icon">
-                <img src="icons/icons8-github-64.png" alt="icon" />
+                <i class="fab fa-github"></i>
               </div>
               <h2>GitHub</h2>
               <ul>
@@ -259,7 +252,10 @@
 
             <div class="skills-item">
               <div class="icon">
-                <img src="icons/icons8-heroku-64.png" alt="icon" />
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+width="50" height="50"
+viewBox="0 0 172 172"
+style=" fill:#000000;"><g transform=""><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g id="original-icon" fill="#ead2a1"><path d="M137.6,6.88h-96.32c-9.48687,0 -17.2,7.71313 -17.2,17.2v123.84c0,9.48688 7.71313,17.2 17.2,17.2h96.32c9.48688,0 17.2,-7.71312 17.2,-17.2v-123.84c0,-9.48687 -7.71312,-17.2 -17.2,-17.2zM56.96156,140.74438v-34.22531l17.11937,17.11937zM121.30031,140.85188h-16.39375v-60.10594c0,0 3.91031,-14.39156 -48.16,5.88563c-0.09406,0.25531 -0.09406,-55.59094 -0.09406,-55.59094l17.01188,-0.09406v35.77062c0,0 47.63594,-18.75875 47.63594,14.23031zM114.595,52.59438h-18.04656c6.50375,-7.94156 12.37594,-21.55375 12.37594,-21.55375h18.66469c0,0 -3.19813,8.86875 -12.99406,21.55375z"></path></g><path d="" fill="none"></path><path d="" fill="none"></path></g></g></svg>
               </div>
               <h2>Heroku</h2>
               <ul>
@@ -269,7 +265,7 @@
 
             <div class="skills-item">
               <div id="netlify-icon" class="icon">
-                <img src="icons/netlify.png" alt="icon" />
+                  <img src="/icons/netlify_logo_icon_145039.svg" alt="netlify">
               </div>
               <h2>Netlify</h2>
               <ul>
@@ -280,7 +276,7 @@
 
             <div class="skills-item">
               <div class="icon">
-                <img src="icons/icons8-customer-insight-64.png" alt="icon" />
+                <i class="fas fa-headset"></i>
               </div>
               <h2>Customer Care</h2>
               <ul>
@@ -292,7 +288,10 @@
 
             <div class="skills-item">
               <div class="icon">
-                <img src="icons/icons8-visual-studio-code-2019-48.png" alt="icon" />
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+width="50" height="50"
+viewBox="0 0 172 172"
+style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#ead2a1"><path d="M121.93187,6.92031c-1.33644,0.04687 -2.6696,0.39517 -3.86328,1.02125c3.1132,1.54112 5.30942,4.58487 5.67062,8.19687c0.06192,0.43344 0.10078,0.82861 0.10078,1.02125v137.6c0,4.07984 -2.38532,7.57644 -5.81844,9.25172c1.25216,0.68456 2.6502,1.06828 4.09844,1.06828c1.28312,0 2.49389,-0.29729 3.58781,-0.79953l0.00672,0.01344c5.53152,-2.86208 33.18691,-17.18302 34.20515,-17.76438c3.20952,-1.8404 5.20031,-5.27841 5.20031,-8.96953v-103.2c0,-3.43312 -1.70028,-6.62673 -4.5486,-8.54625c-1.1008,-0.74648 -34.72922,-18.12047 -34.72922,-18.12047l-0.00672,0.01344c-1.22464,-0.5762 -2.56715,-0.83296 -3.9036,-0.78609zM113.52,13.71969c-0.88021,0 -1.76139,0.33529 -2.43219,1.00781c0,0 -19.69228,22.14532 -41.495,46.64156l25.77984,21.09015l21.58735,-18.18094v-47.11859c0,-0.88064 -0.33701,-1.76139 -1.00781,-2.43219c-0.67252,-0.67252 -1.55198,-1.00781 -2.43219,-1.00781zM27.52,37.79969c-0.53664,0 -1.53472,0.00194 -5.99984,2.06938c-2.4596,1.13864 -11.02547,5.63703 -11.02547,5.63703c-1.1352,0.61576 -2.05094,1.57966 -2.69422,2.69422c0.26144,-0.04128 0.52105,-0.08063 0.79281,-0.08063h0.00672c2.29792,0 3.70714,1.60369 4.20594,2.12313c0,0 97.03316,105.70034 98.28188,106.94906c0.6708,0.6708 1.54483,1.00781 2.42547,1.00781c0.88064,0 1.76139,-0.33701 2.43219,-1.00781c0.6708,-0.6708 1.01453,-1.55155 1.01453,-2.43219v-45.85547c0,0 -84.1639,-68.78758 -84.8175,-69.31735c-1.26592,-1.14896 -2.91282,-1.78719 -4.6225,-1.78719zM7.56531,54.99969c-0.3784,0 -0.68531,0.31019 -0.68531,0.69203v64.00281c0,0.36808 0.30035,0.67187 0.67188,0.67187c0.19264,0 0.36335,-0.08756 0.48375,-0.22172l19.48438,-21.62765v-22.81016l-19.46422,-20.50562c-0.12384,-0.12384 -0.30127,-0.20156 -0.49047,-0.20156zM42.15344,92.2014c0,0 -29.56804,33.19616 -29.90516,33.53328c-0.93224,0.93224 -2.22068,1.505 -3.64828,1.505c-0.26832,0 -0.52809,-0.03262 -0.78609,-0.0739c0.69488,1.20744 1.71393,2.20283 2.97641,2.81515l-0.01344,0.02016c2.9928,1.52048 12.86952,6.53836 14.16984,7.06812c0.81872,0.3268 1.68232,0.49047 2.57328,0.49047c1.19368,0 2.37376,-0.30831 3.43328,-0.91375c0.07912,-0.04472 29.34078,-24.66453 29.34078,-24.66453z"></path></g></g></svg>
               </div>
               <h2>Visual Studio Code</h2>
               <ul>
