--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
     <div class="footer container">
       <!-- contact form -->
       <form class="contact-form" target="_blank" action="https://formsubmit.co/bshakex@gmail.com" method="POST">
-        <h1 class="footer-section-title">Get In Touch</h1>
+        <h1 class="footer-section-title contact">Get In Touch</h1>
 
         <div class="input-div">
           <label for="name">name :</label>
