hamburger dynamic animation

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </a>
         </div>
         <div class="nav-list">
-          <div class="hamburger">
+          <div class="hamburger no-pulse">
             <div class="bar"></div>
           </div>
           <div class="links-container">
