dynamic about article button

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="header container">
       <nav id="navbar">
         <div class="brand">
-          <a href="#footer" title="shakex sempe" class="scroll-link">
+          <a href="#home" title="shakex sempe" class="scroll-link">
             <h1><span>Shakex</span>Sempe</h1>
           </a>
         </div>
